// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar AnonymousAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-eQndoG brd-c-eQndoG-hECRKn-shape-circle brd-c-eQndoG-kRzPmM-size-default brd-c-eQndoG-euTbep-default-true brd-c-eQndoG-iPJLV-css"
  >
    <i
      data-mock-icon="User"
    />
  </span>
</div>
`;

exports[`Avatar Basic should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-eQndoG brd-c-eQndoG-hECRKn-shape-circle brd-c-eQndoG-kRzPmM-size-default brd-c-eQndoG-ibCEZhf-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;

exports[`Avatar ImageAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-eQndoG brd-c-eQndoG-hECRKn-shape-circle brd-c-eQndoG-kRzPmM-size-default brd-c-eQndoG-iPJLV-css"
  >
    <img
      alt="John Smith Avatar"
      src="https://i.pravatar.cc/150?img=42"
    />
  </span>
</div>
`;

exports[`Avatar SquareAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-eQndoG brd-c-eQndoG-liDPBl-shape-square brd-c-eQndoG-bFVlRr-size-large brd-c-eQndoG-ibCEZhf-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;
